test/fail/parse_extern_missing_semicolon.ms
extern "C" {
  fn malloc(size: Nat64): ^Any
};
